html + css gists examples added

--- a/src/index.html
+++ b/src/index.html
@@ -930,7 +930,8 @@
           parent div. No layout css has been applied, just siple styling.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/be28979bea92b52902c1e7c2090afe93.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
@@ -951,7 +952,8 @@
           being applied to each box.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/0cda3cb334032baaab330789842c4f35.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
@@ -973,7 +975,8 @@
 
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/5f735897609e5276940e22607294525d.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
@@ -989,7 +992,7 @@
       </article>
 
       <article class="dev-article-2">
-        <h2 class="dev-article__title">Example 3</h2>
+        <h2 class="dev-article__title">Example 4</h2>
         <p class="dev-article__text">If we have a lot of euqaly sized boxes we can use the shorthand property repeat(6,
           1fr) which would make the colum have 6 boxes all with 1fr widht. Also, you can use grid-gap insted of
           margins. this is really cool as you wont have to remove, add, or equalize tricks margins with the boxes on
@@ -997,11 +1000,12 @@
           everything will look as it should.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/9be730ea9fcb11c3db71d2fa8fa9a454.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
-            <div class="red-border grid grid-rp-6 grid-gap-5">
+            <div class="red-border grid grid-rp-6">
                 <div class="gray-box">box-1</div>
                 <div class="gray-box">box-2</div>
                 <div class="gray-box">box-3</div>
@@ -1017,7 +1021,7 @@
       </article>
 
       <article class="dev-article-2">
-        <h2 class="dev-article__title">Example 4</h2>
+        <h2 class="dev-article__title">Example 5</h2>
         <p class="dev-article__text">As you can see in this example, you can align boxes in a lot of different ways
           within the grid. You can use <b>align-tiems, justify-content and align-self</b> - much like flexbox. Even
           though you can use similar code, both grid and flex-box are different and should be used for different
@@ -1025,7 +1029,8 @@
           probubly avoid using it. </p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/43b843ed9e7158273d5da0022fb2078a.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
@@ -1039,11 +1044,12 @@
       </article>
 
       <article class="dev-article-2">
-        <h2 class="dev-article__title">Example 5</h2>
+        <h2 class="dev-article__title">Example 6</h2>
         <p class="dev-article__text">As you can see in this example, the first box is much larger then all the other boxes. This is one of the best uses of grid, it can allow you to make on box bigger then the rest quickly while not breaking your layout at all. As you can see the first image spans accross 6 rows and 2 colums.  This is great for galleries, as you can set them up really quickly without having to mess or fix code when you change something later on.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/7eb975f71fbcdde8b0fe4cf64d5305b9.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
