smooth scrolling logic - progress

--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,16 @@
     <nav class="mainNav">
       <ul class="mainNav__wrap" data-active="false">
         <li>
-          <a class="mainNav__item mainNav__item--first" href="#html">HTML Tags</a>
+          <a class="mainNav__item mainNav__item--first" data-link="#html">Tags</a>
         </li>
         <li>
-          <a class="mainNav__item" href="#floats">Floats</a>
+          <a class="mainNav__item" data-link="#floats">Floats</a>
         </li>
         <li>
-          <a class="mainNav__item" href="#flexbox">Flexbox</a>
+          <a class="mainNav__item" data-link="#flexbox">Flexbox</a>
         </li>
         <li>
-          <a class="mainNav__item mainNav__item--last" href="#grid">Grid</a>
+          <a class="mainNav__item mainNav__item--last" data-link="#grid">Grid</a>
         </li>
       </ul>
     </nav>
