--- a/src/index.html
+++ b/src/index.html
@@ -17,20 +17,22 @@
     </div>
 
     <nav class="mainNav">
-      <ul class="mainNav__wrap" data-active="false">
-        <li>
-          <a class="mainNav__item mainNav__item--first" data-link="#html">Tags</a>
-        </li>
-        <li>
-          <a class="mainNav__item" data-link="#floats">Floats</a>
-        </li>
-        <li>
-          <a class="mainNav__item" data-link="#flexbox">Flexbox</a>
-        </li>
-        <li>
-          <a class="mainNav__item mainNav__item--last" data-link="#grid">Grid</a>
-        </li>
-      </ul>
+      <div class="mainNav__container">
+        <ul class="mainNav__list">
+          <li>
+            <a class="mainNav__item mainNav__item--first" href="#html">Tags</a>
+          </li>
+          <li>
+            <a class="mainNav__item" href="#floats">Floats</a>
+          </li>
+          <li>
+            <a class="mainNav__item" href="#flexbox">Flexbox</a>
+          </li>
+          <li>
+            <a class="mainNav__item mainNav__item--last" href="#grid">Grid</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <div class="menu-btn__wrap">
